# dt-gate-6g

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  run_all.ps1
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
data/outputs/: epochs_log.csv  table_main.csv
data/telemetry/: sim.jsonl
notebooks/: 00_colab_minimal.ipynb
scripts/: gen_jsonl.py  make_figs.py
src/dt_gate/: __init__.py  config.py  ekf.py  optimizer.py  queueing.py  risk.py  simulate.py  telemetry.py  tube.py
