[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dt-gate-6g"
version = "0.1.0"
description = "AI-enabled digital twin gate for secure & resilient 6G (simulation stack)"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name="Yassir"}]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scikit-learn",
    "scipy"
]

[project.scripts]
dt-gate-sim = "dt_gate.simulate:cli"
